cli/tests/ui/use_name_invalid.stderr
Error: manifest::invalid_name

  × check failed
  ╰─▶ invalid use name `wrap.per`: dots are reserved
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/use_name_invalid.json5:4:5]
 3 │   use: {
 4 │     "wrap.per": "./use_name_invalid_wrapper.json5",
   ·     ─────┬────
   ·          ╰── invalid name
 5 │   },
   ╰────
